deploy/k8s/service.yaml
#golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-api
spec:
  selector:
    app: admin-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
